<resources>
    <string name="app_name">Hellp.me</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="cadastrar">cadastrar</string>
    <string name="action_settings">LOGIN</string>
    <string name="voltar">Voltar</string>
    <string name="Login">login</string>
    <string name="registrar">registrar</string>
    <string name="none" />
    <string name="cliqueAqui">Não tem uma conta? Crie aqui!</string>
    <string name="Enter">Entrar</string>
    <string name="nome">Nome</string>
    <string name="photo">Foto</string>
    <string name="create">Criar</string>
    <string name="privates">Monitoria Privada</string>
    <string name="publics">Monitoria Publica</string>
    <string name="forgotpass">Esqueceu a senha?</string>
    <string name="alterarsenha">Alterar senha</string>
    <string name="orientationpass">Adicione o seu email de cadastro</string>
    <string name="send">Enviar</string>
    <string name="facebook_app_id">417240049013442</string>
    <string name="fb_login_protocol_scheme">fb417240049013442</string>
    <string name="app_id">417240049013442</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_chat">Enviar</string>
    <string name="edit_chat">Digite aqui...</string>

    <string-array name="titles_bar">
        <item>CONVERSAS</item>
        <item>MONITORIAS</item>
    </string-array>
  
    <string name="title_activity_reportar_problema">ActivityReportarProblema</string>

</resources>
