<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/viewEditEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/bordas_arredondadas_textview"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/viewEditSenha"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bordas_arredondadas_textview"
        android:ems="10"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/viewEditEmail"
        app:layout_constraintStart_toStartOf="@+id/viewEditEmail"
        app:layout_constraintTop_toBottomOf="@+id/viewEditEmail" />

    <Button
        android:id="@+id/btlogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/bordas_arredondadas_button"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:text="@string/Enter"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/viewEditSenha"
        app:layout_constraintStart_toStartOf="@+id/viewEditSenha"
        app:layout_constraintTop_toBottomOf="@+id/viewEditSenha" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cliqueAqui"
        android:textColor="@color/Bean_Red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btlogin"
        app:layout_constraintStart_toStartOf="@+id/btlogin"
        app:layout_constraintTop_toBottomOf="@+id/btlogin" />

    <TextView
        android:id="@+id/textForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        android:textColor="@color/Bean_Red"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegister"
        app:layout_constraintVertical_bias="0.068" />

</android.support.constraint.ConstraintLayout>